--- a/Pai/Pai.csproj
+++ b/Pai/Pai.csproj
@@ -200,6 +200,7 @@
     <Content Include="Scripts\d3\d3.js" />
     <Content Include="Scripts\d3\d3.min.js" />
     <Content Include="Scripts\d3\LICENSE" />
+    <Content Include="Data\mydata.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -255,6 +256,7 @@
     <Content Include="Views\ProjectModels\Edit.cshtml" />
     <Content Include="Views\ProjectModels\Index.cshtml" />
     <Content Include="Views\Home\Test.cshtml" />
+    <Content Include="Scripts\mydata.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
